# image-thumbnail

./: CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  main.cpp  vcpkg.json
src/: main.cpp
